update input field width

--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -59,6 +59,10 @@
       background: linear-gradient(90deg, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 80%,rgba(255,255,255,1) 100%);
     }
 
+    input {
+      width: 100%;
+    }
+
     .error {
       width: 0;
       opacity: 0;
