--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -18,7 +18,9 @@
     background-color: #FFF;
     height: 40px;
     line-height: 30px;
-
+    list-style: none;
+    padding: 0;
+    
     &--thead {
       background: #D9D9D9;
       color: #808080;
