--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -3,6 +3,7 @@
 
 .itemBox {
   font-size: 16px;
+  border-radius: 3px;
 
   + .itemBox {
     padding-top: 10px;
@@ -20,7 +21,8 @@
     line-height: 30px;
     list-style: none;
     padding: 0;
-    
+    border-radius: 3px;
+
     &--thead {
       background: #D9D9D9;
       color: #808080;
@@ -227,6 +229,7 @@
 
     input {
       width: 100%;
+      border-radius: 3px;
     }
 
     .selector {
