update shadow multiselect

--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   min-width: 300px;
-  box-shadow: 0 0 200px 60px rgba(0,0,0,0.2);
+  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.2);
   transition: opacity .3s ease-in-out;
   opacity: 0;
   pointer-events: none;
