--- a/sass/tailwind-extend.scss
+++ b/sass/tailwind-extend.scss
@@ -162,6 +162,70 @@ html {
   animation: multi-color 20s linear infinite;
 }
 
+@keyframes animate-loading {
+  0% { background-position: 0 0; }
+  100% { background-position: 80px 0; }
+}
+.animate--loading::before {
+  content: '';
+  position: absolute;
+  z-index: 10;
+  top: 0; right: 0; bottom: 0; left: 0;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  background-size: 80px 80px;
+  background-image: linear-gradient(
+    135deg,
+    rgba(0,0,0,.1) 0%,
+    rgba(0,0,0,.1) 20%,
+    transparent 40%,
+    rgba(0,0,0,.1) 50%,
+    rgba(0,0,0,.1) 70%,
+    transparent 90%,
+    rgba(0,0,0,.1) 100%
+  );
+  -webkit-animation: animate-loading 3s linear infinite;
+  -moz-animation: animate-loading 3s linear infinite;
+  animation: animate-loading 3s linear infinite;
+}
+
+@keyframes animate-popup {
+  25% { transform: scale(1.1); }
+  50% { transform: scale(1); }
+  75% { transform: scale(1.1); }
+  100% { transform: scale(1); }
+}
+.animate--popup {
+  animation: animate-popup .5s ease forwards;
+}
+
+@keyframes animate-fadein {
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+.animate--fadein {
+  opacity: 0;
+  transform: translateY(-20px);
+  animation: animate-fadein .3s ease forwards;
+}
+
+@keyframes animate-fadeout {
+  100% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+}
+.animate--fadeout {
+  opacity: 1;
+  transform: translateY(0);
+  animation: animate-fadeout .3s ease forwards;
+}
+
+
 /* Width / Height */
 
 .max-w-xxs {
