update aniamtion class names

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -1,6 +1,6 @@
 <section style="min-height: 100vh;">
 
-  <header class="header header--item animate--loading">
+  <header class="header header--item animate-loading">
     <input type="text" value="Multiple Element Scroll with 1 scrollbar" class="header__inputTitle h2">
     <div class="header__title">
       <div class="header__type header__type--bug">
@@ -66,7 +66,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">Nr</div>
       </li>
-      <li class="itemBox__cell flex-grow-2 animate--loading">
+      <li class="itemBox__cell flex-grow-2 animate-loading">
         <div class="itemBox__cellInner">Title</div>
       </li>
       <li class="itemBox__cell flex-grow-2">
@@ -130,7 +130,7 @@
       </li>
     </ul>
 
-    <ul class="itemBox__row itemBox__row--item animate--loading">
+    <ul class="itemBox__row itemBox__row--item animate-loading">
       <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
         <div class="itemBox__cellInner"></div>
       </li>
@@ -195,7 +195,7 @@
       </li>
       <li class="itemBox__cell flex-grow-2">
         <div class="itemBox__cellInner">
-          <div class="selector selector--singleselect animate--loading">
+          <div class="selector selector--singleselect animate-loading">
             <div class="selector__item JS_selectorItem--active selector__item--selected">
               <div class="selector__block">
                 <span class="selector__blockPart selector__blockPart--field">_Not Assigned</span>
@@ -409,7 +409,7 @@
     </li>
   </ul>
 
-  <div class="itemBox animate--fadein JS_itemBox--children">
+  <div class="itemBox animate-fadein JS_itemBox--children">
     <header class="header header--table">
       <div class="header__title">
         <h2>Integrated Release Management</h2>
