rename overlay class

--- a/_layouts/drag.html
+++ b/_layouts/drag.html
@@ -5,7 +5,7 @@
   </head>
 
   <body class="page-{{ page.title }}">
-    <div class="app__overlay"></div>
+    <div class="overlay-body"></div>
     {{ content }}
   </body>
 </html>
