--- a/_layouts/itembox.html
+++ b/_layouts/itembox.html
@@ -6,7 +6,7 @@
 
   <body class="page-{{ page.title }}">
     <div class="app">
-      <div class="app__overlay"></div>
+      <div class="overlay-body"></div>
       {{ content }}
     </div>
     <!-- POPUPS -->
