--- a/sass/blocks/app-navigator.scss
+++ b/sass/blocks/app-navigator.scss
@@ -10,7 +10,7 @@
     left: 50%;
   }
 
-  .app__overlay {
+  .overlay-body {
     opacity: 1;
     pointer-events: auto;
     background-color: rgba(0, 0, 0, 0.55);
