--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,6 +1,6 @@
   <div class="app cf item-progress--visible">
 
-      <div class="app__overlay"></div>
+      <div class="overlay-body"></div>
 
       <div class="app-navigator">
         {% include blocks/app-nav.html %}
