--- a/sass/blocks/user-menu.scss
+++ b/sass/blocks/user-menu.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-.user-menu--visible .app__overlay {
+.user-menu--visible .overlay-body {
   opacity: 1;
   pointer-events: auto;
   background-color: rgba(0, 0, 0, 0.55);
