simplify with tailwind framework

--- a/_includes/blocks/app-nav.html
+++ b/_includes/blocks/app-nav.html
@@ -1,4 +1,4 @@
-<div class="app-navigator__nav">
+<div class="h-full overflow-y-auto scrollbar-none">
 
   <div class="tabs tabs--invert">
     <div class="tabs-nav">
@@ -22,7 +22,7 @@
     </div>
     <!-- /.tabs__nav -->
 
-    <div class="tabs-panels">
+    <div class="tabs-panels p-2">
       <div class="tabs-panels__panel" tabindex="1">
         {% include blocks/app-nav-tab1.html %}
       </div>
