--- a/_includes/main.html
+++ b/_includes/main.html
@@ -10,7 +10,7 @@
         {% include blocks/user-menu.html %}
       </div>
 
-      <main class="app__container">
+      <main class="container-master">
         <header class="app-header cf">
           {% include blocks/app-header.html %}
         </header>
@@ -65,6 +65,6 @@
 
               </div><!-- /.document__content -->
           </div><!-- /.app__document -->
-      </main><!-- //app__container -->
+      </main><!-- //container-master -->
 
   </div><!-- /.app -->
