--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="{{ site.baseurl }}/sass/framework.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.5.3/tailwind.min.css" />
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/tailwind-extend.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/tailwind-custom.css">
 
 
 <!-- CDN OR USED PLUGINS NOT MADE BY US -->
