--- a/sass/app.scss
+++ b/sass/app.scss
@@ -54,30 +54,13 @@ body {
   }
 }
 
-.app {
+.container-master {
   position: relative;
-
-  &__overlay {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0,0,0,.25);
-    z-index: 9000;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity .3s ease-in-out;
-  }
-
-  &__container {
-    position: relative;
-    left: 0;
-    transition: all .3s ease-in-out;
-    max-width: 100vw;
-    width: 100%;
-    background-color: #2C5386;
-  }
+  left: 0;
+  transition: all .3s ease-in-out;
+  max-width: 100vw;
+  width: 100%;
+  background-color: #2C5386;
 }
 
 .state-overlay {
