add cp to present

--- a/_layouts/present.html
+++ b/_layouts/present.html
@@ -9,6 +9,9 @@
   <body>
     {{ content }}
 
+    <!-- POPUPS -->
+    {% include popups/multiSelector-columnpicker.html %}
+
     {% include foot.html %}
 
     <!-- Libraries -->
