reorder stylesheet to avoind important

--- a/_includes/blocks/itembox.html
+++ b/_includes/blocks/itembox.html
@@ -1,241 +1,13 @@
-<section style="min-height: 100vh;">
-
-  <header class="header header--item animate-loading">
-    <input type="text" value="Multiple Element Scroll with 1 scrollbar" class="header__inputTitle h2">
-    <div class="header__title">
-      <div class="header__type header__type--bug">
-        <span class="header__label h6">Bug</span>
-        <span class="header__id">391441</span>
-      </div>
-      <h2 class="truncate">Multiple Element Scroll with 1 scrollbar<sup>5</sup></h2>
-    </div>
-    <div class="header__actions">
-      <div class="block-action disabled"></div>
-      <div class="block-action readonly">
-
-        <div class="selector selector--expanded">
-          <div class="selector__item JS_selectorItem--active selector__item--selected">
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--field">Ongoing</div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <div class="block-action"></div>
-      <div class="block-action"><sup>0/3</sup></div>
-    </div>
-  </header>
-
-  <header class="header header--section">
-    <div class="header__title">
-      <h3 class="truncate">Description</h3>
-    </div>
-  </header>
-
-  <header class="header header--section">
-    <div class="header__title">
-      <h3 class="truncate">Description</h3>
-    </div>
-
-    <div class="header__actions">
-      <div class="block-action"></div>
-      <div class="block-action"></div>
-    </div>
-  </header>
-
-  <header class="header header--table">
-    <div class="header__title">
-      <h2>This sprint<sup>5</sup></h2>
-    </div>
-    <div class="header__actions">
-      <div class="block-action disabled"></div>
-      <div class="block-action">Print</div>
-      <div class="block-action"></div>
-      <div class="block-action JS_has-popup" data-popid="#multiSelector-columnpicker"></div>
-    </div>
-  </header>
-
-  <div class="itemBox">
-    <ul class="itemBox__row itemBox__row--thead">
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action"></div>
-        </div>
-      </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">Nr</div>
-      </li>
-      <li class="itemBox__cell flex-grow-2 animate-loading">
-        <div class="itemBox__cellInner">Title</div>
-      </li>
-      <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner">Assigned to</div>
-      </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">Reported by customer</div>
-      </li>
-    </ul>
-
-    <ul class="itemBox__row itemBox__row--item">
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-        <div class="itemBox__cellInner"></div>
-      </li>
-      <li class="itemBox__cell">
-        <input type="text" class="itemBox__input">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__value">
-            <div class="selector selector--expanded">
-              <div class="selector__item JS_selectorItem--active selector__item--selected">
-                <div class="selector__block">
-                  <div class="selector__blockPart selector__blockPart--field">395415</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
-        <input type="text" class="itemBox__input">
-        <div class="itemBox__cellInner">Bulk update speed regressed in 282.0</div>
-      </li>
-      <li class="itemBox__cell flex-grow-2">
-        <input type="text" class="itemBox__input">
-        <div class="itemBox__cellInner">
-          <div class="selector selector--singleselect">
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <span class="selector__blockPart selector__blockPart--field">Vasya Aksyonov</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <div class="selector selector--singleselect selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-    </ul>
-
-    <ul class="itemBox__row itemBox__row--item animate-loading">
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action">
-        <div class="itemBox__cellInner"></div>
-      </li>
-      <li class="itemBox__cell">
-        <input type="text" class="itemBox__input">
-        <div class="itemBox__cellInner">
-          <div class="selector selector--expanded">
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field">35825</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
-        <input type="text" class="itemBox__input">
-        <div class="itemBox__cellInner">Write spec for semantic search</div>
-      </li>
-      <li class="itemBox__cell flex-grow-2">
-        <input type="text" class="itemBox__input">
-        <div class="itemBox__cellInner">
-          <div class="selector selector--singleselect">
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <span class="selector__blockPart selector__blockPart--field">Vincent Goosens</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <div class="selector selector--singleselect selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-    </ul>
-
-    <ul class="itemBox__row itemBox__row--item">
-      <li class="itemBox__cell flex-grow-0 itemBox__cell--action JS_expand">
-        <div class="itemBox__cellInner">
-          <div class="itemBox__action"></div>
-        </div>
-      </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner"></div>
-      </li>
-      <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
-        <div class="itemBox__cellInner">Integrated Release Management</div>
-      </li>
-      <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner">
-          <div class="selector selector--singleselect animate-loading">
-            <div class="selector__item JS_selectorItem--active selector__item--selected">
-              <div class="selector__block">
-                <span class="selector__blockPart selector__blockPart--field">_Not Assigned</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner">
-          <div class="selector selector--singleselect selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--prefix"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </li>
-    </ul>
-
-    <ul class="itemBox__row itemBox__row--tfoot">
-      <li class="itemBox__cell">
-      </li>
-    </ul>
+<header class="header header--section">
+  <div class="header__title">
+    <h3 class="truncate">Bugs<sup>76</sup></h3>
   </div>
 
-</section>
-
-
-
-
-
-
+  <div class="header__actions">
+    <div class="block-action"></div>
+    <div class="block-action"></div>
+  </div>
+</header>
 
 <div class="itemBox">
   <ul class="itemBox__row itemBox__row--thead">
@@ -263,7 +35,6 @@
       <div class="itemBox__cellInner"></div>
     </li>
     <li class="itemBox__cell">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="itemBox__value">
           <div class="selector selector--expanded">
@@ -277,11 +48,9 @@
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">Bulk update speed regressed in 282.0</div>
     </li>
     <li class="itemBox__cell flex-grow-2">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
           <div class="selector__item JS_selectorItem--active selector__item--selected">
@@ -316,7 +85,6 @@
       <div class="itemBox__cellInner"></div>
     </li>
     <li class="itemBox__cell">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--expanded">
           <div class="selector__item JS_selectorItem--active selector__item--selected">
@@ -328,11 +96,9 @@
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">Write spec for semantic search</div>
     </li>
     <li class="itemBox__cell flex-grow-2">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
           <div class="selector__item JS_selectorItem--active selector__item--selected">
@@ -602,7 +368,6 @@
       <div class="itemBox__cellInner"></div>
     </li>
     <li class="itemBox__cell">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="itemBox__value">
           <div class="selector selector--expanded">
@@ -616,11 +381,9 @@
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">Opening person detail page is slow (> 30 sec)</div>
     </li>
     <li class="itemBox__cell flex-grow-2">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
           <div class="selector__item JS_selectorItem--active selector__item--selected">
@@ -655,7 +418,6 @@
       <div class="itemBox__cellInner"></div>
     </li>
     <li class="itemBox__cell">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="itemBox__value">
           <div class="selector selector--expanded">
@@ -669,11 +431,9 @@
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">Backup Report [Failed] > backup.admin@tenforce.com > Belgacom-App > Job 2013-06-</div>
     </li>
     <li class="itemBox__cell flex-grow-2">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
           <div class="selector__item JS_selectorItem--active selector__item--selected">
@@ -708,7 +468,6 @@
       <div class="itemBox__cellInner"></div>
     </li>
     <li class="itemBox__cell">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="itemBox__value">
           <div class="selector selector--expanded">
@@ -722,11 +481,9 @@
       </div>
     </li>
     <li class="itemBox__cell flex-grow-2 itemBox__cell--permalink">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">Kallo: statistiek geen tekst FW: stats</div>
     </li>
     <li class="itemBox__cell flex-grow-2">
-      <input type="text" class="itemBox__input">
       <div class="itemBox__cellInner">
         <div class="selector selector--singleselect">
           <div class="selector__item JS_selectorItem--active selector__item--selected">
