--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -49,6 +49,7 @@
       position: relative;
       list-style: none;
       margin: 0 10px;
+      padding: 0;
       font-size: 0;
       left: 0;
 
