--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" class="antialiased">
   <head>
     {% include head.html %}
   </head>
 
   <body class="page-{{ page.title }}">
     <div class="overlay-body fixed pin opacity-0 pointer-events-none transition z-40"></div>
-    
+
     {{ content }}
 
     {% include foot.html %}
