--- a/_layouts/present.html
+++ b/_layouts/present.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" class="antialiased">
   <head>
     <link rel="stylesheet" href="{{ site.baseurl }}/sass/aaa-old-pmx.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/sass/aaa-old-pmx-temp.css">
