update field component

--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -21,6 +21,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #808080;
+    z-index: 2;
 
     &--placeholder {
       top: 16px;
