--- a/_includes/blocks/popup/ms-row-load-more.html
+++ b/_includes/blocks/popup/ms-row-load-more.html
@@ -1,4 +1,4 @@
-<ul class="itemBox__row itemBox__row--item itemBox__row--action">
+<ul class="itemBox__row itemBox__row--item itemBox__row--action JS_loadMoreButton">
   <li class="itemBox__cell itemBox__cell--action">
     <div class="itemBox__cellInner">
       <div class="itemBox__action">Load <span>25</span> more out of 75</div>
