--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -6,6 +6,7 @@
       </div>
     </li>
   </ul>
+  {% include blocks/popup/ms-row-use-global-search.html%}
 </div><!-- /.itemBox -->
 
 <div class="itemBox JS_appNavBox">
