update css files

--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -14,6 +14,7 @@
 
 // Components
 @import "components/headers.css";
+@import "components/titles.css";
 @import "components/field.css";
 @import "components/selector.css";
 @import "components/itembox.css";
