--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -10,7 +10,7 @@
   &__label {
     position: absolute;
     top: -1px;
-    padding: 0 5px 0 0;
+    padding: 0 5px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -22,30 +22,35 @@
     text-transform: uppercase;
     color: #808080;
     z-index: 2;
+  }
 
-    &--placeholder {
-      top: 16px;
-      font-size: 16px;
-      font-weight: 400;
-      font-style: italic;
-      letter-spacing: normal;
-      text-transform: none;
-      opacity: .4;
+  &__data {
+    position: relative;
+
+    min-height: 40px;
+    white-space: nowrap;
+    transition: all .3s ease-in-out;
+    cursor: text;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  &__error {
+    width: 0;
+    opacity: 0;
+    color: var(--color-red);
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+
+    &:hover {
+      transform: translateY(-2px);
     }
   }
 
   &__value {
-    position: relative;
-    min-height: 40px;
-    line-height: 30px;
-    z-index: 1;
-    white-space: nowrap;
-    padding: 5px 0;
-    background-color: transparent;
-    transition: all .3s ease-in-out;
-    cursor: text;
-    overflow: hidden;
-    border-radius: 2px;
+    width: 100%;
 
     &::after {
       content: '';
@@ -59,36 +64,57 @@
       background: linear-gradient(90deg, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 80%,rgba(255,255,255,1) 100%);
     }
 
-    input {
-      width: 100%;
-    }
-
-    .error {
-      width: 0;
-      opacity: 0;
-    }
-
     .selector {
-      vertical-align: top;
+      z-index: 2;
+    }
+
+    .selector ~ .field__input {
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: 0;
+      height: 100%;
+      user-select: none;
+    }
+  }
+
+  &__input {
+    width: 100%;
+    padding: 10px 10px;
+    background: none;
+    border: 0;
+    margin: 0 -5px;
+    transition: all .3s ease-in-out;
+
+    &:focus {
+      background-color: #FFF;
+      box-shadow: 0 0 100px rgba(0,0,0,.4);
+      z-index: 50;
     }
   }
 
   &--tooltip {
-    .field {
-      &__label {
-        cursor: pointer;
-      }
+    .field__label {
+      cursor: pointer;
     }
   }
 
   &--error {
-    .field {
-      &__value {
-        .error {
-          width: 26px;
-          opacity: 1;
-        }
-      }
+    .field__error {
+      width: 26px;
+      opacity: 1;
+    }
+  }
+
+  &--empty {
+    .field__label {
+      top: 16px;
+      font-size: 16px;
+      font-weight: 400;
+      font-style: italic;
+      letter-spacing: normal;
+      text-transform: none;
+      opacity: .4;
     }
   }
 
@@ -100,7 +126,6 @@
       font-style: normal;
       letter-spacing: 1px;
       text-transform: uppercase;
-      color: #808080;
       opacity: 1;
     }
   }
