--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -76,7 +76,8 @@
       z-index: -1;
       height: 100%;
       user-select: none;
-      color: transparent;
+      margin: 0 -5px;
+      font-size: 0;
     }
   }
 
