--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -23,7 +23,7 @@
     font-style: italic;
     letter-spacing: normal;
     text-transform: none;
-    opacity: .4;
+    opacity: .7;
   }
 
   &__data {
@@ -52,31 +52,29 @@
   }
 
   &__value {
+    position: relative;
     width: 100%;
 
     &::after {
       content: '';
       position: absolute;
       top: 0;
-      right: 0;
-      width: 50px;
+      right: 5px;
+      width: 40px;
       height: 100%;
       pointer-events: none;
-      z-index: 5;
+      z-index: 1;
       background: linear-gradient(90deg, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 80%,rgba(255,255,255,1) 100%);
-    }
-
-    .selector {
     }
 
     .selector ~ .field__input {
       position: absolute;
       left: 0;
-      top: 0;
+      top: -5px;
+      min-height: 40px;
       z-index: -1;
       height: 100%;
       user-select: none;
-      margin: 0 -5px;
       font-size: 0;
     }
   }
@@ -87,6 +85,10 @@
     padding: 10px 10px;
     background: none;
     border: 0;
+    margin: 0 -5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &:focus {
       background-color: #FFF;
