--- a/sass/components/note.scss
+++ b/sass/components/note.scss
@@ -4,9 +4,10 @@
 .note {
   position: relative;
   display: inline-block;
-  padding: 10px;
-  background-color: #F9F9F9;
+  padding: 9px;
+  background-color: #F8F1FC;
   border-radius: 3px;
+  border: 1px solid #FFF;
 
   &--tooltip {
   }
