--- a/sass/components/note.scss
+++ b/sass/components/note.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: inline-block;
   padding: 9px;
-  background-color: #F8F1FC;
+  background-color: #F8FAFC;
   border-radius: 3px;
   border: 1px solid #FFF;
 
