--- a/_layouts/drag.html
+++ b/_layouts/drag.html
@@ -2,6 +2,9 @@
 <html lang="en-us" class="antialiased">
   <head>
     {% include head.html %}
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.5.2/tailwind.min.css" />
+      <link rel="stylesheet" href="{{ site.baseurl }}/sass/tailwind-extend.css">
+      <link rel="stylesheet" href="{{ site.baseurl }}/sass/components/buttons.css">
   </head>
 
   <body class="page-{{ page.title }}">
