add focus / hover effect

--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -9,7 +9,7 @@
   {% for itemgroup in site.data.user-menu.itemgroups %}
     <div class="itemBox">
       {% for item in itemgroup %}
-      <ul class="itemBox__row itemBox__row--item">
+      <ul class="itemBox__row itemBox__row--item itemBox__row--permalink">
         <li class="itemBox__cell flex-grow-0">
           <div class="itemBox__cellInner">
             <div class="itemBox__value">{{item.icon}}</div>
