--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -82,8 +82,7 @@
             }
 
             &::before {
-              background: #B2B2B2;
-              background: linear-gradient(to right, #929292 0%, var(--color-blue) 20%, var(--color-blue) 50%, var(--color-blue) 80%, #929292 100%);
+              background-color: var(--color-blue);
             }
           }
         }
@@ -122,7 +121,13 @@
           &__cell {
             &::before {
               height: 2px;
-              opacity: 1;
+              opacity: .5;
+            }
+
+            &:hover {
+              &::before {
+                opacity: 1;
+              }
             }
           }
           &__action {
@@ -130,6 +135,36 @@
               opacity: 1;
             }
           }
+        }
+      }
+    }
+
+    &--permalink {
+      &::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 0;
+        display: block;
+        background-color: var(--color-blue);
+        z-index: 2;
+        pointer-events: none;
+        opacity: 0;
+        transition: all .3s ease-in-out;
+      }
+
+      &:hover {
+        &::before {
+          height: 2px;
+          opacity: 1;
+        }
+      }
+
+      .itemBox__cell {
+        &::before {
+          display: none;
         }
       }
     }
