--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -116,6 +116,7 @@
         background-color: #FFFFFF;
       }
 
+      &:focus,
       &:hover {
         .itemBox {
           &__cell {
@@ -124,6 +125,7 @@
               opacity: .5;
             }
 
+            &:focus,
             &:hover {
               &::before {
                 opacity: 1;
@@ -155,6 +157,7 @@
         transition: all .3s ease-in-out;
       }
 
+      &:focus,
       &:hover {
         &::before {
           height: 2px;
