--- a/_includes/blocks/app-nav.html
+++ b/_includes/blocks/app-nav.html
@@ -10,7 +10,7 @@
       <ul>
         <span class="tabs-nav__linkBar"></span>
         <li><a href="#" class="tabs-nav__link tabs-nav__link--active" tabindex="1"><span>Structure</span></a></li>
-        <li><a href="#" class="tabs-nav__link" tabindex="2"><span>Smartlists</span></a></li>
+        <li><a href="#" class="tabs-nav__link" tabindex="2"><span>Overviews</span></a></li>
         <li><a href="#" class="tabs-nav__link" tabindex="3"><span>Recently used</span></a></li>
         <li><a href="#" class="tabs-nav__link" tabindex="4"><span>Favorites</span></a></li>
       </ul>
