--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -47,7 +47,7 @@
             width: 100%;
             height: 0;
             display: block;
-            background-color: #929292;
+            background-color: #CACACA;
             z-index: 2;
             pointer-events: none;
             opacity: 0;
@@ -116,19 +116,23 @@
         background-color: #FFFFFF;
       }
 
-      &:focus,
       &:hover {
         .itemBox {
           &__cell {
             &::before {
               height: 2px;
-              opacity: .5;
+              opacity: 1;
             }
 
-            &:focus,
-            &:hover {
+            &--permalink {
               &::before {
-                opacity: 1;
+                opacity: .5;
+              }
+
+              &:hover {
+                &::before {
+                  opacity: 1;
+                }
               }
             }
           }
