tryout comment/attachment fiedl

--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -25,3 +25,4 @@
 @import "components/buttons.css";
 @import "components/progress.css";
 @import "components/comments.css";
+@import "components/comment-field.css";
